tests/cases/standard-library/errors/prelude/prelude-take-non-place.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  let token = take(make_owned(1));
  drop token;
  return 0;
}
